Started preparing for discord authorization