@@ -1,7 +1,6 @@
 package net.pumbas.deadlinebot.authorization;
 
 import com.google.api.client.auth.oauth2.AuthorizationCodeFlow;
-import com.google.api.client.auth.oauth2.AuthorizationCodeRequestUrl;
 import com.google.api.client.auth.oauth2.Credential;
 import com.google.api.client.auth.oauth2.TokenResponse;
 import com.google.api.client.googleapis.auth.oauth2.GoogleAuthorizationCodeFlow;
@@ -13,6 +12,7 @@ import com.google.api.client.util.store.FileDataStoreFactory;
 import com.google.api.services.calendar.CalendarScopes;
 
 import net.pumbas.deadlinebot.App;
+import net.pumbas.deadlinebot.authorization.discord.DiscordCredentials;
 
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.springframework.boot.CommandLineRunner;
@@ -24,8 +24,12 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
+
+import javax.servlet.http.HttpSession;
 
 @Service
 public class AuthorizationService
@@ -34,9 +38,12 @@ public class AuthorizationService
 
     public static final String TOKENS_FILE_PATH = "tokens";
     public static final String CREDENTIALS_FILE_PATH = "credentials.json";
-    public static final List<String> SCOPES = Collections.singletonList(CalendarScopes.CALENDAR_READONLY);
+    public static final List<String> CALENDAR_SCOPES = Collections.singletonList(CalendarScopes.CALENDAR_READONLY);
+    public static final List<String> DISCORD_SCOPES = List.of("identity");
 
-    private AuthorizationCodeFlow flow;
+    private String baseDiscordAuthorizationUrl;
+    private DiscordCredentials discordCredentials;
+    private AuthorizationCodeFlow googleFlow;
 
     @Bean
     public CommandLineRunner initialise() {
@@ -45,8 +52,15 @@ public class AuthorizationService
             InputStream in = new ClassPathResource(CREDENTIALS_FILE_PATH).getInputStream();
             GoogleClientSecrets clientSecrets = GoogleClientSecrets.load(jsonFactory, new InputStreamReader(in));
 
-            this.flow = new GoogleAuthorizationCodeFlow.Builder(
-                GoogleNetHttpTransport.newTrustedTransport(), jsonFactory, clientSecrets, SCOPES)
+            InputStream discordCredentialJson = new ClassPathResource("discord_credentials.json").getInputStream();
+            this.discordCredentials = jsonFactory.fromInputStream(discordCredentialJson, DiscordCredentials.class);
+
+            this.baseDiscordAuthorizationUrl = "https://discord.com/api/oauth2/authorize?client_id=" + this.discordCredentials.getClientId()  +
+                "redirect_uri=" + escapeUrlCharacters(AUTHORIZE_REDIRECT_URL) + "&response_type=token&scope=" +
+                String.join("%20", DISCORD_SCOPES);
+
+            this.googleFlow = new GoogleAuthorizationCodeFlow.Builder(
+                GoogleNetHttpTransport.newTrustedTransport(), jsonFactory, clientSecrets, CALENDAR_SCOPES)
                 .setDataStoreFactory(new FileDataStoreFactory(new File(TOKENS_FILE_PATH)))
                 .setAccessType("offline")
                 .build();
@@ -55,16 +69,20 @@ public class AuthorizationService
 
 
     public String getAuthorizationUrl(String discordId) {
-        return flow.newAuthorizationUrl()
+        return googleFlow.newAuthorizationUrl()
             .setRedirectUri(AUTHORIZE_REDIRECT_URL)
             .setState(discordId)
             .build();
     }
 
+    public String getDiscordAuthorizationUrl(HttpSession session) {
+        return this.baseDiscordAuthorizationUrl + "&state=" + toBase64(session.getId());
+    }
+
     @Nullable
     public Credential getCredentials(String discordId) {
         try {
-            Credential credential = flow.loadCredential(discordId);
+            Credential credential = googleFlow.loadCredential(discordId);
             if (isValid(credential))
                 return credential;
         } catch (IOException e) {
@@ -75,8 +93,8 @@ public class AuthorizationService
 
     public void storeCredentials(String code, String discordId) {
         try {
-            TokenResponse response = flow.newTokenRequest(code).setRedirectUri(AUTHORIZE_REDIRECT_URL).execute();
-            flow.createAndStoreCredential(response, discordId);
+            TokenResponse response = googleFlow.newTokenRequest(code).setRedirectUri(AUTHORIZE_REDIRECT_URL).execute();
+            googleFlow.createAndStoreCredential(response, discordId);
             System.out.println("Created and stored credentials for discordId: " + discordId);
         } catch (IOException e) {
             e.printStackTrace();
@@ -94,5 +112,15 @@ public class AuthorizationService
         } catch (IOException ignored) {
             return false;
         }
+    }
+
+    public static String toBase64(String str) {
+        return Base64.getUrlEncoder().encodeToString(str.getBytes(StandardCharsets.UTF_8));
+    }
+
+    public static String escapeUrlCharacters(String redirectUrl) {
+        return redirectUrl.replaceAll("/", "%2F")
+            .replaceAll("\\\\", "%5C")
+            .replaceAll(":", "%3A");
     }
 }
